# 240-project

./: .gitignore  LOGGING_SETUP.md  README.md  intuition.md  main.ipynb  main.py  pyproject.toml
notebooks/: eda.ipynb  eda_segment_demand.ipynb  main.ipynb
src/: config.py  logging_config.py  network.py  optimize.py  report.py  routing.py  stress.py
tests/: test_config.py  test_path_lookup.py
